# phodispl

./: .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
doc/: config.ini  keybindings.md
include/phodispl/: animation-interpolation.hpp  animation.hpp  box.hpp  config-types.hpp  config.hpp  continuous-scale.hpp  damageable.hpp  fade-widget.hpp  file-listing.hpp  font-name.hpp  fonts.hpp  formatting.hpp  frame.hpp  fs-watcher.hpp  image-cache.hpp  image-display.hpp  image-source.hpp  image-view.hpp  image.hpp  infobar.hpp  message-box.hpp  movement.hpp  nav-button.hpp  path-compare.hpp  progress-circle.hpp  sequence-clock.hpp  stopwatch.hpp  view-transform.hpp  viewport.hpp  window.hpp
resources/: generate-resources.cpp  meson.build
resources/icons/: create-font.sh
resources/shader/fragment/: crossfade.fs.glsl  nav-button.fs.glsl  plane-colorize.fs.glsl  plane.fs.glsl  progress-circle.fs.glsl
resources/shader/vertex/: plane-uv.vs.glsl  progress-circle.vs.glsl
shader/fragment/: crossfade.fs.glsl  nav-button.fs.glsl  plane-gc.fs.glsl  plane-solid.fs.glsl  plane.fs.glsl
shader/vertex/: crossfade.vs.glsl  nav-button.vs.glsl  plane-object.vs.glsl  progress-circle.vs.glsl
src/: box.cpp  config.cpp  continuous-scale.cpp  fade-widget.cpp  file-listing.cpp  font-name.cpp  formatting.cpp  fs-watcher.cpp  image-cache.cpp  image-display.cpp  image-source.cpp  image-view.cpp  image.cpp  infobar.cpp  main.cpp  meson.build  message-box.cpp  movement.cpp  nav-button.cpp  path-compare.cpp  progress-circle.cpp  view-transform.cpp  viewport.cpp  window.cpp
subprojects/: iconfigp.wrap  logcerr.wrap  pixglot.wrap
tests/: meson.build  path-sort.cpp
